--- a/Proyectos_Javascripts/Galeria_Imagenes/index.html
+++ b/Proyectos_Javascripts/Galeria_Imagenes/index.html
@@ -13,7 +13,7 @@
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="public/bundle.css" />
-		<script src="./public/bundle.js"></script>
+		<script defer src="./public/bundle.js"></script>
 		<title>Mi viaje por el mundo</title>
 	</head>
 	<body>
@@ -26,13 +26,13 @@
 		<main>
 			<div class="contenedor">
 				<div class="categorias" id="categorias">
-					<a href="#" class="categoria" data-categoria="america">
+<!-- 					<a href="#" class="categoria" data-categoria="america">
 						<img class="categoria__img" src="./img/america.jpg" alt="" />
 						<div class="categoria__datos">
 							<p class="categoria__nombre">America</p>
 							<p class="categoria__numero-fotos">35 fotos</p>
 						</div>
-					</a>
+					</a> -->
 				</div>
 			</div>
 		</main>
@@ -80,7 +80,7 @@
 								</button>
 							</div>
 							<div class="galeria__carousel-slides">
-								<a href="#" class="galeria__carousel-slide">
+<!-- 								<a href="#" class="galeria__carousel-slide">
 									<img class="galeria__carousel-image" src="./img/africa/1.jpg" alt="" />
 								</a>
 								<a href="#" class="galeria__carousel-slide">
@@ -100,7 +100,7 @@
 								</a>
 								<a href="#" class="galeria__carousel-slide">
 									<img class="galeria__carousel-image" src="./img/africa/7.jpg" alt="" />
-								</a>
+								</a> -->
 							</div>
 							<div class="galeria__carousel-adelante">
 								<button class="galeria__btn" data-accion="siguiente-slide">
