--- a/Proyectos_Javascripts/Galeria_Imagenes/index.html
+++ b/Proyectos_Javascripts/Galeria_Imagenes/index.html
@@ -19,7 +19,7 @@
 	<body>
 		<header>
 			<div class="hero">
-				<h3 class="hero__subtitulo">Carlos Arturo</h3>
+				<h3 class="hero__subtitulo">DAVS</h3>
 				<h1 class="hero__titulo">Mi viaje por el mundo</h1>
 			</div>
 		</header>
@@ -57,7 +57,7 @@
 						</button>
 					</div>
 					<div class="galeria__contenedor-imagen-activa" id="imagenActiva">
-						<img src="./img/africa/1.jpg" class="galeria__imagen" />
+						<img src="" class="galeria__imagen" />
 					</div>
 					<div class="galeria__contenedor-carousel">
 						<p class="galeria__descripcion-imagen-activa"></p>
@@ -202,7 +202,7 @@
 						</svg>
 					</a>
 				</div>
-				<p class="creditos">Sitio creado por Carlos Arturo</p>
+				<p class="creditos">Sitio creado por DAVS</p>
 			</div>
 		</footer>
 	</body>
