--- a/Proyectos_Javascripts/Tienda/index.html
+++ b/Proyectos_Javascripts/Tienda/index.html
@@ -266,9 +266,7 @@
 
 				<div class="mas-informacion" id="mas-informacion">
 					<div class="tabs">
-						<button class="tabs__button tabs__button--active" data-tab="caracteristicas">
-							Caracteristicas
-						</button>
+						<button class="tabs__button tabs__button--active" data-tab="caracteristicas">Caracteristicas</button>
 						<button class="tabs__button" data-tab="reseñas">Reseñas</button>
 						<button class="tabs__button" data-tab="envio">Envio</button>
 					</div>
@@ -451,7 +449,7 @@
 			<a href="#" class="notificacion__link" data-accion="abrir-carrito">Ver carrito</a>
 		</div>
 
-		<div class="carrito" id="carrito">
+		<div class="carrito carrito--vacio" id="carrito">
 			<div class="carrito__overlay">
 				<div class="carrito__contenedor">
 					<div class="carrito__header">
